Added splash screen.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -12,7 +12,15 @@ cz.afrosoft.whattoeat.core.dialog.button.finish=Dokon\u010Dit
 cz.afrosoft.whattoeat.core.dialog.button.next=Dal\u0161\u00ED
 cz.afrosoft.whattoeat.core.dialog.button.previous=P\u0159edchoz\u00ED
 cz.afrosoft.whattoeat.common.quantity=Mno\u017Estv\u00ED
+cz.afrosoft.whattoeat.common.version=Verze:
 #Common end
+#Splash screen
+cz.afrosoft.whattoeat.splashscreen.tip=Tip:
+cz.afrosoft.whattoeat.splashscreen.loading=... Startujeme Spring Boot a dal\u0161\u00ED sofistikovan\u00E9 v\u011Bci ...
+cz.afrosoft.whattoeat.splashscreen.tip1=Pro editaci mno\u017Estv\u00ED ingredience v receptu pou\u017Eijte dvojklik na hodnotu.
+cz.afrosoft.whattoeat.splashscreen.tip2=P\u0159i vyt\u00E1\u0159en\u00ED receptu je mo\u017En\u00E9 se p\u0159ep\u00EDnat mezi z\u00E1lo\u017Ekami pomoc\u00ED Tabu.
+cz.afrosoft.whattoeat.splashscreen.tip3=Tab posunuje focus na n\u00E1sleduj\u00EDc\u00ED komponentu. Shift + Tab na p\u0159edchoz\u00ED.
+#Splash screen end
 
 #Menu
 cz.afrosoft.whattoeat.menu.authors=Auto\u0159i
