Recipe filtering part1.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -66,6 +66,10 @@ cz.afrosoft.whattoeat.cookbook.detail=Popis kucha\u0159ky
 
 #Recipes
 cz.afrosoft.whattoeat.recipes.filter.title=Filtrovat:
+cz.afrosoft.whattoeat.recipes.filter.name=Jm\u00E9no:
+cz.afrosoft.whattoeat.recipes.filter.cookbook=Kucha\u0159ka:
+cz.afrosoft.whattoeat.recipes.filter.type=Typ:
+cz.afrosoft.whattoeat.recipes.filter.button=Filtrovat
 
 cz.afrosoft.whattoeat.recipes.actions.title=Akce
 cz.afrosoft.whattoeat.recipes.table.header.name=Jm\u00E9no
