Finished recipe filter.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -65,7 +65,7 @@ cz.afrosoft.whattoeat.cookbook.detail=Popis kucha\u0159ky
 #end of cookbooks
 
 #Recipes
-cz.afrosoft.whattoeat.recipes.filter.title=Filtrovat:
+cz.afrosoft.whattoeat.recipes.filter.title=Filtr:
 cz.afrosoft.whattoeat.recipes.filter.name=Jm\u00E9no:
 cz.afrosoft.whattoeat.recipes.filter.cookbook=Kucha\u0159ka:
 cz.afrosoft.whattoeat.recipes.filter.type=Typ:
