--- a/todo.txt
+++ b/todo.txt
@@ -34,6 +34,7 @@
 
 ----- BUGS -------------------------------------------------------------------------------------------------------------
 - Combo Box bound to list - navigating by arrows in combo box select values immediately
+- Database script is not updated immediately after program close.
 
 Done bugs:
 X - Ingredient keywords overlaps in recipe detail dialog.
