--- a/todo.txt
+++ b/todo.txt
@@ -34,8 +34,8 @@
 
 ----- BUGS -------------------------------------------------------------------------------------------------------------
 - Combo Box bound to list - navigating by arrows in combo box select values immediately
-- Database script is not updated immediately after program close.
 - AddRecipe dialog - clearing of duration fields does not work
+- Author and Cookbook descriptions are not saved as CLOB
 
 Done bugs:
 X - Ingredient keywords overlaps in recipe detail dialog.
@@ -43,6 +43,7 @@ X - Fix random generator to work even if no recipes are available for some type.
 X - Enable text wrap for text areas in dialogs and in cookbook and author detail
 X - Check why ingredient creates unit conversion entity even when not filled
 X - Check if all file operations closes their streams.
+X - Database script is not updated immediately after program close.
 
 Done features:
 X - Add possibility to open recipe by double click in recipe view table.
