--- a/todo.txt
+++ b/todo.txt
@@ -34,8 +34,6 @@
 
 ----- BUGS -------------------------------------------------------------------------------------------------------------
 - Combo Box bound to list - navigating by arrows in combo box select values immediately
-- AddRecipe dialog - clearing of duration fields does not work
-- Author and Cookbook descriptions are not saved as CLOB
 
 Done bugs:
 X - Ingredient keywords overlaps in recipe detail dialog.
@@ -44,6 +42,8 @@ X - Enable text wrap for text areas in dialogs and in cookbook and author detail
 X - Check why ingredient creates unit conversion entity even when not filled
 X - Check if all file operations closes their streams.
 X - Database script is not updated immediately after program close.
+X - AddRecipe dialog - clearing of duration fields does not work
+X - Author and Cookbook descriptions are not saved as CLOB
 
 Done features:
 X - Add possibility to open recipe by double click in recipe view table.
