--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -14,6 +14,8 @@ cz.afrosoft.whattoeat.core.dialog.button.previous=P\u0159edchoz\u00ED
 cz.afrosoft.whattoeat.common.quantity=Mno\u017Estv\u00ED
 cz.afrosoft.whattoeat.common.version=Verze:
 cz.afrosoft.whattoeat.common.exception=Nastala neo\u010Dek\u00E1van\u00E1 chyba
+cz.afrosoft.whattoeat.common.filter=Filtr
+cz.afrosoft.whattoeat.common.name=Jm\u00E9no
 #Common end
 #Splash screen
 cz.afrosoft.whattoeat.splashscreen.tip=Tip:
