Fixed sorting of keywords. Added entity graph for loading recipes to recipe list.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -16,6 +16,7 @@ cz.afrosoft.whattoeat.common.version=Verze:
 cz.afrosoft.whattoeat.common.exception=Nastala neo\u010Dek\u00E1van\u00E1 chyba
 cz.afrosoft.whattoeat.common.filter=Filtr
 cz.afrosoft.whattoeat.common.name=Jm\u00E9no
+cz.afrosoft.whattoeat.common.sideDishes=P\u0159\u00EDlohy
 #Common end
 #Splash screen
 cz.afrosoft.whattoeat.splashscreen.tip=Tip:
