Created FieldLabel. Used it in recipe filter and moved filter messages to common. Updated css.

--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,6 @@
 - Create custom component for MultiSelect, so MultiSelect does not need to hack underlying CheckComboBox
 - Decide if IngredientQuantityTable should be in core components or in ingredient package and thus ComponentUtil has to provide public access
 - Measure and optimize loading of tables
-- Create FieldLabel component which adds ':' automatically after internationalized text, so there can be only one variant in message properties.
 - Clean up messages.properties so there are no duplicate words. Use common keys instead.
 - Optimize filtering so items from database are already sorted. Optimize converting of entities to sorted set.
 - Duration field should extend RegexRestrictedField
@@ -118,6 +117,7 @@ X - Basic recipe filter
 X - wrap actions in try catch and show error dialog on error, so user has feedback that some shit happened
 
 Done Arch:
+X - Create FieldLabel component which adds ':' automatically after internationalized text, so there can be only one variant in message properties.
 X - Create application wide css file used by all FXML loaders, so some styles can be easily changed for whole app (like buttons size)
 X - Create method for creating fxml loader with resource bundle in Main and use it in all places which creates FXML loader
 X - Devise proper mechanism for FXML custom components
