--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -16,6 +16,8 @@ cz.afrosoft.whattoeat.common.version=Verze:
 cz.afrosoft.whattoeat.common.exception=Nastala neo\u010Dek\u00E1van\u00E1 chyba
 cz.afrosoft.whattoeat.common.filter=Filtr
 cz.afrosoft.whattoeat.common.name=Jm\u00E9no
+cz.afrosoft.whattoeat.common.cookbook=Kucha\u0159ka
+cz.afrosoft.whattoeat.common.type=Typ
 cz.afrosoft.whattoeat.common.sideDishes=P\u0159\u00EDlohy
 #Common end
 #Splash screen
@@ -69,12 +71,6 @@ cz.afrosoft.whattoeat.cookbook.detail=Popis kucha\u0159ky
 #end of cookbooks
 
 #Recipes
-cz.afrosoft.whattoeat.recipes.filter.title=Filtr:
-cz.afrosoft.whattoeat.recipes.filter.name=Jm\u00E9no:
-cz.afrosoft.whattoeat.recipes.filter.cookbook=Kucha\u0159ka:
-cz.afrosoft.whattoeat.recipes.filter.type=Typ:
-cz.afrosoft.whattoeat.recipes.filter.button=Filtrovat
-
 cz.afrosoft.whattoeat.recipes.actions.title=Akce
 cz.afrosoft.whattoeat.recipes.table.header.name=Jm\u00E9no
 cz.afrosoft.whattoeat.recipes.table.header.recipeType=Typ
