--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -19,6 +19,7 @@ cz.afrosoft.whattoeat.common.name=Jm\u00E9no
 cz.afrosoft.whattoeat.common.cookbook=Kucha\u0159ka
 cz.afrosoft.whattoeat.common.type=Typ
 cz.afrosoft.whattoeat.common.sideDishes=P\u0159\u00EDlohy
+cz.afrosoft.whattoeat.common.none=\u017D\u00E1dn\u00FD
 #Common end
 #Splash screen
 cz.afrosoft.whattoeat.splashscreen.tip=Tip:
