Diets part 2 - base of gui.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -20,6 +20,9 @@ cz.afrosoft.whattoeat.common.cookbook=Kucha\u0159ka
 cz.afrosoft.whattoeat.common.type=Typ
 cz.afrosoft.whattoeat.common.sideDishes=P\u0159\u00EDlohy
 cz.afrosoft.whattoeat.common.none=\u017D\u00E1dn\u00FD
+cz.afrosoft.whattoeat.common.actions=Akce
+cz.afrosoft.whattoeat.common.from=Od
+cz.afrosoft.whattoeat.common.to=Do
 #Common end
 #Splash screen
 cz.afrosoft.whattoeat.splashscreen.tip=Tip:
@@ -203,13 +206,14 @@ cz.afrosoft.whattoeat.dialog.exception.stacktrace=Detaily (Stack trace)
 #Dialog titles end
 
 #Diet list
+cz.afrosoft.whattoeat.dietlist.title=J\u00EDdeln\u00ED\u010Dek
 cz.afrosoft.whattoeat.dietlist.table.ingredientKey=Jm\u00E9no
 cz.afrosoft.whattoeat.dietlist.table.from=Od
 cz.afrosoft.whattoeat.dietlist.table.to=Do
 
 cz.afrosoft.whattoeat.dietlist.action.view=Z
-
-
+cz.afrosoft.whattoeat.dietlist.table.generator=Gener\u00E1tor
+cz.afrosoft.whattoeat.dietview.detail=Popis j\u00EDdeln\u00ED\u010Dku
 cz.afrosoft.whattoeat.dietview.table.day=Den
 cz.afrosoft.whattoeat.dietview.table.breakfast=Sn\u00EDdan\u011B
 cz.afrosoft.whattoeat.dietview.table.morningSnack=Dopoledn\u00ED sva\u010Dina
