--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -169,7 +169,7 @@ cz.afrosoft.whattoeat.diet.generator.input.dinner=Ve\u010De\u0159e:
 cz.afrosoft.whattoeat.diet.generator.input.generate=Generovat
 
 cz.afrosoft.whattoeat.diet.generator.dialog.generated.header=J\u00EDdeln\u00ED\u010Dek vygenerov\u00E1n
-
+cz.afrosoft.whattoeat.diet.generator.none.description=Tento gener\u00E1tor vytv\u00E1\u0159\u00ED pouze pr\u00E1zdn\u00E9 dny. J\u00EDdeln\u00ED\u010Dek si pak u\u017Eivatel sestav\u00ED manu\u00E1ln\u011B.
 #Diet generator end
 
 #Data model
